--- a/main/books/elst/ayodhya_case_against_temple/07_ch6.md
+++ b/main/books/elst/ayodhya_case_against_temple/07_ch6.md
@@ -1,5 +1,5 @@
 +++
-title = "07 6. The details about x93Hindu iconoclasmx94"
+title = "07 6. The details about Hindu iconoclasm"
 
 +++
 **6. The details about “Hindu iconoclasm”**
