--- a/content/main/books/elst/ayodhya_case_against_temple/11_ch10.md
+++ b/content/main/books/elst/ayodhya_case_against_temple/11_ch10.md
@@ -1,5 +1,5 @@
 +++
-title = "11 10. Mohammed Habibx92s history-rewriting"
+title = "11 10. Mohammed Habib's history-rewriting"
 
 +++
 **10. Mohammed Habib’s history-rewriting**
