--- a/main/books/misc/Stock_taking_of_sangh_parivAr/17_chii14.md
+++ b/main/books/misc/Stock_taking_of_sangh_parivAr/17_chii14.md
@@ -1,5 +1,5 @@
 +++
-title = "17  Letter to the Organiser Re: "DURGA" in the VANDE MATARAM song as composed by Bankimchandra"
+title = "17  Letter to the Organiser Re: \"DURGA\" in the VANDE MATARAM song as composed by Bankimchandra"
 
 +++
 <div align="right">
