--- a/content/main/books/vivekAnanda/appendices/letters/1436_1888.md
+++ b/content/main/books/vivekAnanda/appendices/letters/1436_1888.md
@@ -4,9 +4,7 @@ title: '1436 Chronological Index to Swami Vivekananda''s letters published in th
   Complete Works Vol. I to Vol. IX'
 
 ---
-[Home](../../../index.htm) / [Complete-Works](../../complete_works.htm)
-/ [Appendices](../appendices_contents.htm) / [Letters: Chronological
-Index](chronological_letters_contents.htm) /
+
 
 
 
@@ -17,9 +15,9 @@ Index](chronological_letters_contents.htm) /
 |                 |                                                                      |                     |                   |
 |-----------------|----------------------------------------------------------------------|---------------------|-------------------|
 | Date            | Vol. / Letter / Page                                                 | Written From        | Written to        |
-| August 12, 88   | [6 / I\* / 201](../../volume_6/epistles_second_series/001_sir.htm)   | Vrindaban           | Mitra, Pramadadas |
-| August 20, 88   | [6 / II\* / 201](../../volume_6/epistles_second_series/002_sir.htm)  | Vrindaban           | Mitra, Pramadadas |
-| November 19, 88 | [6 / III\* / 202](../../volume_6/epistles_second_series/003_sir.htm) | Baranagar Math      | Mitra, Pramadadas |
-| November 28, 88 | [8 / I\* / 283](../../volume_8/epistles_fourth_series/001_sir.htm)   | Baghbazar, Calcutta | Mitra, Pramadadas |
+| August 12, 88   | [6 / I\* / 201](../../../volume_6/epistles_second_series/)   | Vrindaban           | Mitra, Pramadadas |
+| August 20, 88   | [6 / II\* / 201](../../../volume_6/epistles_second_series/)  | Vrindaban           | Mitra, Pramadadas |
+| November 19, 88 | [6 / III\* / 202](../../../volume_6/epistles_second_series/) | Baranagar Math      | Mitra, Pramadadas |
+| November 28, 88 | [8 / I\* / 283](../../../volume_8/epistles_fourth_series/)   | Baghbazar, Calcutta | Mitra, Pramadadas |
 
 [→](1889.htm)
