--- a/content/main/books/vivekAnanda/appendices/letters/1437_1889.md
+++ b/content/main/books/vivekAnanda/appendices/letters/1437_1889.md
@@ -4,9 +4,7 @@ title: '1437 Chronological Index to Swami Vivekananda''s letters published in th
   Complete Works Vol. I to Vol. IX'
 
 ---
-[Home](../../../index.htm) / [Complete-Works](../../complete_works.htm)
-/ [Appendices](../appendices_contents.htm) / [Letters: Chronological
-Index](chronological_letters_contents.htm) /
+
 
 
 
@@ -17,21 +15,21 @@ Index](chronological_letters_contents.htm) /
 |                 |                                                                       |                      |                     |
 |-----------------|-----------------------------------------------------------------------|----------------------|---------------------|
 | Date            | Vol / Letter / Page                                                   | Written From         | Written to          |
-| February 4, 89  | [6 / IV\* / 203](../../volume_6/epistles_second_series/004_sir.htm)   | Baranagore Math      | Mitra, Pramadadas   |
-| February 7, 89  | [6 / V / 204](../../volume_6/epistles_second_series/005_m.htm)        | Antpur               | M (Master Mahasaya) |
-| February 22, 89 | [8 / II\* / 283](../../volume_8/epistles_fourth_series/002_sir.htm)   | Baranagore           | Mitra, Pramadadas   |
-| March 21, 89    | [8 / III\* / 284](../../volume_8/epistles_fourth_series/003_sir.htm)  | Baghbazar, Calcutta  | Mitra, Pramadadas   |
-| June 26, 89     | [6 / VI\* / 204](../../volume_6/epistles_second_series/006_sir.htm)   | Baranagore Math      | Mitra, Pramadadas   |
-| July 4, 89      | [6 / VII\* / 205](../../volume_6/epistles_second_series/007_sir.htm)  | Baghbazar, Calcutta  | Mitra, Pramadadas   |
-| July 14, 89     | [8 / IV\* / 284](../../volume_8/epistles_fourth_series/004_sir.htm)   | Simla (Calcutta)     | Mitra, Pramadadas   |
-| August 7, 89    | [6 / VIII\* / 208](../../volume_6/epistles_second_series/008_sir.htm) | Baranagore, Calcutta | Mitra, Pramadadas   |
-| August 17, 89   | [6 / IX\* / 209](../../volume_6/epistles_second_series/009_sir.htm)   | Baranagore, Calcutta | Mitra, Pramadadas   |
-| September 2, 89 | [6 / X\* / 214](../../volume_6/epistles_second_series/010_sir.htm)    | Baghbazar, Calcutta  | Mitra, Pramadadas   |
-| December 3, 89  | [6 / XI\* / 214](../../volume_6/epistles_second_series/011_sir.htm)   | Baghbazar, Calcutta  | Mitra, Pramadadas   |
-| December 13, 89 | [6 / XII\* / 215](../../volume_6/epistles_second_series/012_sir.htm)  | Baranagore, Calcutta | Mitra, Pramadadas   |
-| December 25, 89 | [7 / I\* / 441](../../volume_7/epistles_third_series/01_sir.htm)      | Baidyanath           | Bose, Balaram       |
-| December 26, 89 | [6 / XIII\* / 216](../../volume_6/epistles_second_series/013_sir.htm) | Baidyanath           | Mitra, Pramadadas   |
-| December 30, 89 | [6 / XIV\* / 216](../../volume_6/epistles_second_series/014_sir.htm)  | Allahabad            | Mitra, Pramadadas   |
-| December 30, 89 | [7 / II\* / 443](../../volume_7/epistles_third_series/02_sir.htm)     | Allahabad            | Bose, Balaram       |
+| February 4, 89  | [6 / IV\* / 203](../../../volume_6/epistles_second_series/)   | Baranagore Math      | Mitra, Pramadadas   |
+| February 7, 89  | [6 / V / 204](../../../volume_6/epistles_second_series/)        | Antpur               | M (Master Mahasaya) |
+| February 22, 89 | [8 / II\* / 283](../../../volume_8/epistles_fourth_series/)   | Baranagore           | Mitra, Pramadadas   |
+| March 21, 89    | [8 / III\* / 284](../../../volume_8/epistles_fourth_series/)  | Baghbazar, Calcutta  | Mitra, Pramadadas   |
+| June 26, 89     | [6 / VI\* / 204](../../../volume_6/epistles_second_series/)   | Baranagore Math      | Mitra, Pramadadas   |
+| July 4, 89      | [6 / VII\* / 205](../../../volume_6/epistles_second_series/)  | Baghbazar, Calcutta  | Mitra, Pramadadas   |
+| July 14, 89     | [8 / IV\* / 284](../../../volume_8/epistles_fourth_series/)   | Simla (Calcutta)     | Mitra, Pramadadas   |
+| August 7, 89    | [6 / VIII\* / 208](../../../volume_6/epistles_second_series/) | Baranagore, Calcutta | Mitra, Pramadadas   |
+| August 17, 89   | [6 / IX\* / 209](../../../volume_6/epistles_second_series/)   | Baranagore, Calcutta | Mitra, Pramadadas   |
+| September 2, 89 | [6 / X\* / 214](../../../volume_6/epistles_second_series/)    | Baghbazar, Calcutta  | Mitra, Pramadadas   |
+| December 3, 89  | [6 / XI\* / 214](../../../volume_6/epistles_second_series/)   | Baghbazar, Calcutta  | Mitra, Pramadadas   |
+| December 13, 89 | [6 / XII\* / 215](../../../volume_6/epistles_second_series/)  | Baranagore, Calcutta | Mitra, Pramadadas   |
+| December 25, 89 | [7 / I\* / 441](../../../volume_7/epistles_third_series/)      | Baidyanath           | Bose, Balaram       |
+| December 26, 89 | [6 / XIII\* / 216](../../../volume_6/epistles_second_series/) | Baidyanath           | Mitra, Pramadadas   |
+| December 30, 89 | [6 / XIV\* / 216](../../../volume_6/epistles_second_series/)  | Allahabad            | Mitra, Pramadadas   |
+| December 30, 89 | [7 / II\* / 443](../../../volume_7/epistles_third_series/)     | Allahabad            | Bose, Balaram       |
 
 [→](1890.htm)
