--- a/content/main/books/vivekAnanda/appendices/letters/1439_1891.md
+++ b/content/main/books/vivekAnanda/appendices/letters/1439_1891.md
@@ -4,9 +4,7 @@ title: '1439 Chronological Index to Swami Vivekananda''s letters published in th
   Complete Works Vol. I to Vol. IX'
 
 ---
-[Home](../../../index.htm) / [Complete-Works](../../complete_works.htm)
-/ [Appendices](../appendices_contents.htm) / [Letters: Chronological
-Index](chronological_letters_contents.htm) /
+
 
 
 
@@ -17,8 +15,8 @@ Index](chronological_letters_contents.htm) /
 |              |                                                                                 |              |                |
 |--------------|---------------------------------------------------------------------------------|--------------|----------------|
 | Date         | Vol / Letter / Page                                                             | Written From | Written to     |
-| April 14, 91 | [6 / XXXV / 244](../../volume_6/epistles_second_series/035_govinda_sahay.htm)   | Ajmer        | Sahay, Govinda |
-| April 30, 91 | [6 / XXXVI / 244](../../volume_6/epistles_second_series/036_govinda_sahay.htm)  | Mt. Abu      | Sahay, Govinda |
-|              | [6 / XXXVII / 245](../../volume_6/epistles_second_series/037_govinda_sahay.htm) | Mt. Abu      | Sahay, Govinda |
+| April 14, 91 | [6 / XXXV / 244](../../../volume_6/epistles_second_series/)   | Ajmer        | Sahay, Govinda |
+| April 30, 91 | [6 / XXXVI / 244](../../../volume_6/epistles_second_series/)  | Mt. Abu      | Sahay, Govinda |
+|              | [6 / XXXVII / 245](../../../volume_6/epistles_second_series/) | Mt. Abu      | Sahay, Govinda |
 
 [→](1892.htm)
