--- a/content/main/books/ambedkar/ambedkar_partition/205.md
+++ b/content/main/books/ambedkar/ambedkar_partition/205.md
@@ -1,5 +1,5 @@
 +++
-title = "54 CHAPTER V xa0WEAKENING OF THE DEFENCES"
+title = "54 CHAPTER V WEAKENING OF THE DEFENCES"
 
 +++
 -- [Table of contents](index.html#contents) --
